# cfd-rs-mesh

./: Cargo.toml
output/: advancing_0.vtk  advancing_1.vtk  test_1.vtk
src/: lib.rs  main.rs  triangle.rs
src/triangle/: advancing_front.rs  delaunay.rs
src/triangle/advancing_front/: steps.rs  utils.rs
src/triangle/advancing_front/steps/: test.rs
src/triangle/advancing_front/utils/: test.rs
