[package]
name = "cfd-rs-mesh"
author = ["Xavier N."]
version = "0.1.0"
edition = "2021"
description = "An helper lib for cfd-rs, used to compute and import meshes (WIP)."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
